Work continued: New HTTP Client can work with a configured HTTPProxy